--- a/qrcode-for-weixin.html
+++ b/qrcode-for-weixin.html
@@ -47,7 +47,7 @@
                             <div id="qrcodeImgContainer" class="grerweima" style="text-align: center; width: 93%; padding: 0 15px;">
                                 <img id="aimQrcodeImg" src="grerweima.jpg" style="width: 100%; ">
                             </div>
-                            <input id="hiddenUrl" type="hidden" value="http://{#$smarty.server.SERVER_NAME#}/index.php?doctorId={#$user.uid#}">
+                            <input id="hiddenUrl" type="hidden" value="http://somedomain/index.php?id={#$user.uid#}">
                             <div id="qrcodeContainer" style="display: none;"></div>
                         </div> 
                     </div>
